force-app/main/default/objects/Class_Student__c/Class_Student__c.object-meta.xml
<CustomObject>
    <label>Class Student</label>
    <nameField>
        <displayFormat>ROLL-{000}</displayFormat>
        <label>Roll No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>