force-app/main/default/objects/Class_Student__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <referenceTo>class__c</referenceTo>
    <relationshipLabel>Class Students</relationshipLabel>
    <relationshipName>Class_Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>