force-app/main/default/objects/Class_Student__c/fields/Seat_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Seat_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seat Assigned</label>
    <type>Checkbox</type>
</CustomField>