force-app/main/default/objects/Class_Student__c/fields/SittingPosition__c.field-meta.xml
<CustomField>
    <fullName>SittingPosition__c</fullName>
    <label>SittingPosition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>