force-app/main/default/objects/Class_Student__c/listViews/Full_Details.listView-meta.xml
<ListView>
    <fullName>Full_Details</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>SittingPosition__c</columns>
    <columns>Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full Details</label>
</ListView>